# mlops_project

./: .gitignore  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  README.md  metrics.json  profile.prof  profile_output.prof  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt
.github/workflows/: CI.yml  cml.yml  docker-gcp-deploy.yml
Artifacts/mlruns/17d305f582414ba9b1d580859d433769/: meta.yaml
Artifacts/mlruns/28508383c63740408800c706e0f25673/: meta.yaml
Artifacts/mlruns/2cfe79ff617d436c8928f439299e7a92/: meta.yaml
Artifacts/mlruns/3e0783eb356842c9be43ead51a36ee3f/: meta.yaml
Artifacts/mlruns/5836f7a9cdc746baba5ef638e0e0d45f/: meta.yaml
Artifacts/mlruns/6349ac1ef4484751afcab15d4da24a36/: meta.yaml
Artifacts/models/: model.json  models.h5
data/raw/: .gitignore  sudoku-2.csv.dvc
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlruns/0/: meta.yaml
mlruns/0/61e5e04965eb4120892e5018066abee3/: meta.yaml
models/: .gitignore  digit model.h5  digit_model.h5  models.h5.dvc  sudoku_model.h5.dvc
notebooks/: digit_identifier-1.ipynb  puzzle_utils-1.ipynb  sudoku.ipynb
se_489_mlops_projec/: __init__.py
se_489_mlops_project/: __init__.py  app.py  evaluate_model.py  main.py  predict.py  puzzle_utils.py  training.py
se_489_mlops_project/.dvc/: .gitignore  config
se_489_mlops_project/conf/: config.yaml
se_489_mlops_project/data/: data_preprocess.py  download_data.py
se_489_mlops_project/models/: model.py
se_489_mlops_project/templates/: index.html
tests/: test_sudoku_solver.py
(+105 files in other folders)
